added the following functions to script.js: uncheckNext, elementQuiz. Added name value to radios for answer list.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,10 @@ header{
     margin-top: 1%;
     border-bottom: 1px dashed grey;
 }
-#answerSection{
+.answerSection{
     display: flex;
     justify-content: center;
+}
+.answerSection ul li label{
+    cursor: pointer;
 }
