--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ header{
 .question h2{
     display: flex;
     justify-content: center;
+    margin-top: 5%;
 }
 /* about paragraph */
 .question p{
@@ -21,6 +22,7 @@ header{
     width: 50%;
     text-align: left;
     text-indent: 30px;
+    margin-top: 5%;
 }
 /* take quiz container */
 .takeBtn{
@@ -70,4 +72,15 @@ header{
     margin-top: 5%;
     display: flex;
     justify-content: center;
+}
+/* timer */
+.timeCont{
+    display: flex;
+    justify-content: center;
+    margin-top: 5%;
+    font-size: 1.5rem;
+}
+/* questions */
+.questionH1{
+    margin: 5%;
 }
