--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,9 @@
+/* universal body */
+body{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-top: 10%;
+}
+
 /* main title container*/
 header{
     display: flex;
@@ -29,6 +35,18 @@ header{
     margin-top: 5%;
     display: flex;
     justify-content: center;
+    
+}
+.takeQuiz{
+    background-color: black;
+    border: none;
+    color: azure;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 1.5rem;
+    cursor: pointer;
 }
 /* highscore container */
 .highScores{
@@ -44,27 +62,31 @@ header{
     display: flex;
     justify-content: space-between;
     flex-direction: row;
-    width: 51%;
-    margin-left: 25%;
+    width: 25%;
+    margin-left: 38%;
 }
 /* list container */
 .highScores ul{
-    width: 50%;
-    margin-left: 25%;
+    width: 25%;
+    margin-left: 38%;
 }
 /* hiscore list items */
 .highScores ul li{
     display: flex;
     justify-content: space-between;
     flex-direction: row;
-    margin-top: 1%;
-    border-bottom: 1px dashed grey;
+    margin-top: 3%;
 }
 .answerSection{
     display: flex;
     justify-content: center;
+    margin: 2%;
 }
+
 .answerSection ul li label{
+    cursor: pointer;
+}
+.answerSection ul li input{
     cursor: pointer;
 }
 /* start button */
@@ -78,12 +100,9 @@ header{
     display: flex;
     justify-content: center;
     margin-top: 5%;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
 }
 /* questions */
 .questionH1{
     margin: 5%;
 }
-
-
-/* todo: all */
